fix: body overflow

--- a/css/dpt_love.css
+++ b/css/dpt_love.css
@@ -34,7 +34,7 @@ html,
 body {
   font-family: "DPTFont";
   width: 100%;
-  height: 100%;
+  height: 100vh;
   margin: 0px;
   overflow: hidden;
   position: absolute;
